# NEURON_NEW

./: .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.md  CONFIDENTIAL.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.txt  LICENSE  MANIFEST.in  MASSIVE_MODEL_GUIDE.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_RESULTS.md  QUICKSTART.md  README.md  V2_FEATURES.md  config.yaml  main.py  main_old.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_l40.sh  train.py  train_complete.py  train_old.py  validate.py
.github/workflows/: ci.yml
benchmarks/: README_BENCHMARK.md  comprehensive_benchmark.py  comprehensive_suite.py  transformer_vs_neuronsv2.py  visualize_results.py
docs/: ARCHITECTURE.md  COMPLETE_SUMMARY.md  GETTING_STARTED.md  HEADER.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ORGANIZATION_SUMMARY.md  README.md  README.md.backup  TRAINING_GUIDE.md  TRAINING_INFRASTRUCTURE.md  V2_FEATURES.md
examples/: complete_demo.py  continual_learning_example.py  fewshot_learning_example.py  gradient_stability.py  holographic_demo.py  neuronsv2_complete.py  neuronsv2_example.py  quickstart.py  sequence_modeling.py  train_mnist_example.py  v2_quickstart.py  verify_complexity.py
neurons/: __init__.py  models.py  neuronsv2_backup.py  neuronsv2_network.py  neuronsv2_unified.py  optimization.py  sequence_modeling.py  utils.py
neurons/benchmarks/: __init__.py  train_cifar10.py  train_continual.py  train_fewshot.py  train_mnist.py
neurons/core/: __init__.py  adaptive_routing.py  advanced_dendrites.py  advanced_plasticity.py  dendrites_torch.py  dendritic_computation.py  emergent_attention.py  ewc.py  multimodal_fusion.py  neuromodulation.py  neuron.py  oscillations.py  plasticity.py  predictive_plasticity.py  spectral_temporal.py  spectral_temporal_torch.py  task_adapters.py  temporal_coding.py
neurons/kernels/: __init__.py  triton_kernels.py
neurons/spiking/: __init__.py  config.py  dendrites.py  model.py  oscillators.py  plasticity.py  spiking.py
neurons/training/: trainer.py
neurons/utils/: __init__.py  data.py  logging.py  metrics.py  visualization.py
neuronsv2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resonance_neural_networks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
resonance_nn/: __init__.py
resonance_nn/benchmark/: __init__.py  benchmark.py  l40_benchmark.py
resonance_nn/export/: __init__.py
resonance_nn/layers/: __init__.py  embeddings.py  holographic.py  resonance.py
resonance_nn/models/: __init__.py  long_context.py  resonance_net.py
resonance_nn/multimodal/: __init__.py  audio.py  fusion.py  vision.py
scripts/: README_TRAINING.md  check_training_ready.py  comparative_benchmark.py  hf_login.py  massive_model_benchmark.py  prepare_data.py  quick_train.sh  run_benchmarks.py  throughput_benchmark.py  train_finewebedu_32k.py  train_finewebedu_32k_distributed.py  train_l40.py  verify_docs.sh  warmup_multimodal_benchmark.py
tests/: conftest.py  test_model.py  test_resonance.py  test_spiking.py  test_trainer.py  test_utils.py
(+7 files in other folders)
