# pyproject.toml - Modern Python packaging configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuronsv2"
version = "2.0.0"
description = "NEURONSv2: Revolutionary Neural Architecture - 28× faster than Transformers with O(n) attention"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oluwatosin Abioye Afolabi", email = "afolabi@genovotech.com"}
]
keywords = [
    "neural-networks",
    "deep-learning", 
    "transformers",
    "attention-mechanism",
    "biologically-inspired",
    "neuromorphic",
    "few-shot-learning",
    "meta-learning",
    "continual-learning",
    "edge-ai",
    "efficient-ml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "numba>=0.57.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]
viz = [
    "plotly>=5.14.0",
    "tensorboard>=2.13.0",
]
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
    "plotly>=5.14.0",
    "tensorboard>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/tafolabi009/NEURONS_NEW"
Documentation = "https://github.com/tafolabi009/NEURONS_NEW#readme"
Repository = "https://github.com/tafolabi009/NEURONS_NEW"
Issues = "https://github.com/tafolabi009/NEURONS_NEW/issues"

[project.scripts]
neuronsv2-train = "training.train_loop:main"
neuronsv2-benchmark = "training.efficiency_benchmark:main"

[tool.setuptools.packages.find]
exclude = ["benchmarks*", "examples*", "data*", "checkpoints*", ".history*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=neurons --cov=training --cov-report=term-missing"
